Fixed some more spacing
SPACING!

--- a/web/css/general.css
+++ b/web/css/general.css
@@ -4,8 +4,7 @@ body
 	background-color:#FFFFFF;
 }
 h1
-{
-	padding-top:100px;
+{	
 	padding-bottom:-10px;
 }
 .form-actions
